bk_ida/gccida/c3/assign_parms
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/assign_parms/src/function.c:4770:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *values; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/assign_parms/src/function.c:4774:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/assign_parms/src/function.c:4793:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v30; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/assign_parms/src/function.c:4794:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v31; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/assign_parms/src/function.c:4795:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v32; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/assign_parms/src/function.c:4802:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v39; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/assign_parms/src/function.c:4803:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v40; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/assign_parms/src/function.c:4804:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v41; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/assign_parms/src/function.c:4807:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v44; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/assign_parms/src/function.c:4826:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v63; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/assign_parms/src/function.c:4830:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v67; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/assign_parms/src/function.c:4835:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v72; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/assign_parms/src/function.c:4843:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tree; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/assign_parms/src/function.c:4853:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v90; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/assign_parms/src/function.c:4858:7: error: use of undeclared identifier 'regno_decl'
tree *regno_decl; // rbp 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/assign_parms/src/function.c:4859:5: error: expected ';' after expression
tree result; // r14 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/assign_parms/src/function.c:4859:6: error: use of undeclared identifier 'result'
tree result; // r14 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/assign_parms/src/function.c:4862:7: error: use of undeclared identifier 'v99'
tree *v99; // rbp 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/assign_parms/src/function.c:4877:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v114; // r14d 
^
enum 
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/assign_parms/src/obj/function.o] Error 1
